--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -2,10 +2,10 @@
 ansible==6.4.0
 ansible-compat==2.2.1 ; python_version >= '3.8'
 ansible-core==2.13.4 ; python_version >= '3.8'
-ansible-lint==6.7.0
+ansible-lint==6.8.0
 attrs==22.1.0 ; python_version >= '3.5'
 bitmath==1.3.3.1
-black==22.8.0 ; python_full_version >= '3.6.2'
+black==22.10.0 ; python_version >= '3.7'
 bracex==2.3.post1 ; python_version >= '3.7'
 cachez==0.1.2
 certifi==2022.9.24 ; python_version >= '3.6'
@@ -14,7 +14,6 @@ charset-normalizer==2.1.1 ; python_full_version >= '3.6.0'
 click==8.1.3 ; python_version >= '3.7'
 commonmark==0.9.1
 cryptography==38.0.1 ; python_version >= '3.6'
-enrich==1.2.7 ; python_version >= '3.6'
 filelock==3.8.0 ; python_version >= '3.7'
 idna==3.4 ; python_version >= '3.5'
 jinja2==3.1.2 ; python_version >= '3.7'
