--- a/.github/workflows/gron.yml
+++ b/.github/workflows/gron.yml
@@ -13,7 +13,7 @@ on:
     - cron: "0 8 * * 1"
 
 env:
-  BUILD_VERSION: "v0.7.1"
+  BUILD_VERSION: "null"
   DOCKER_CLI_EXPERIMENTAL: enabled
   REPOSITORY: ${{ github.actor }}/${{ github.workflow }} 
 
