--- a/nginx-quic/Dockerfile.ubuntu.quictls
+++ b/nginx-quic/Dockerfile.ubuntu.quictls
@@ -6,11 +6,11 @@ WORKDIR /src
 COPY . .
 
 RUN apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends git gcc g++ gcc-12 g++-12 mold make perl ca-certificates && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends git gcc-12 g++-12 mold make perl ca-certificates && \
     git clone --depth 1 https://github.com/quictls/openssl && \
     cd openssl && \
-		export CC=/usr/bin/gcc-12 && \
-		export CXX=/usr/bin/g++-12 && \
+    export CC=/usr/bin/gcc-12 && \
+    export CXX=/usr/bin/g++-12 && \
     ./Configure enable-ktls && \
     make
 
