--- a/.github/workflows/nginx.yml
+++ b/.github/workflows/nginx.yml
@@ -62,7 +62,7 @@ jobs:
         
       - name: Setup mold
         id: mold
-        uses: rui314/setup-mold@v1
+        uses: rui314/setup-mold@6dde38252affb567c951f891790da82dc6f23e6b
 
 #      - name: Setup cache
 #        uses: actions/cache@c64c572235d810460d0d6876e9c705ad5002b353 # v2.1.6
