--- a/.github/workflows/subfinder.yml
+++ b/.github/workflows/subfinder.yml
@@ -42,6 +42,7 @@ jobs:
             production.cloudflare.docker.com:443
             proxy.golang.org:443
             registry-1.docker.io:443
+            storage.googleapis.com:443
           
       - name: Source checkout
         uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # v2.4.0 
