--- a/nginx-quic/Dockerfile.alpine.boringssl
+++ b/nginx-quic/Dockerfile.alpine.boringssl
@@ -72,6 +72,7 @@ LABEL org.opencontainers.image.title "jauderho/nginx-quic"
 LABEL org.opencontainers.image.description "nginx is a web server"
 
 RUN apk update && \
+    apk upgrade -a && \
     apk add --no-cache pcre2
 
 COPY --from=build /src/nginx-quic/objs/nginx /usr/sbin
