--- a/sslyze/Dockerfile.alpine
+++ b/sslyze/Dockerfile.alpine
@@ -12,6 +12,7 @@ COPY requirements.txt .
 
 RUN \
 	apk update && \
+	apk upgrade -a && \
 	build_pkgs="cargo build-base libffi-dev openssl-dev python3-dev py3-pip" && \
 	runtime_pkgs="ca-certificates openssl python3" && \
 	apk --no-cache add --virtual build-dependencies ${build_pkgs} && \
