--- a/.github/workflows/update-python.yml
+++ b/.github/workflows/update-python.yml
@@ -12,6 +12,7 @@ on:
       - scripts/updatePythonDeps.sh
       - .github/workflows/ansible.yml
       - .github/workflows/catprinter.yml
+      - .github/workflows/dkimpy.yml
       - .github/workflows/docker-autocompose.yml
       - .github/workflows/sslyze.yml
       - .github/workflows/visidata.yml
