--- a/dkimpy/Dockerfile.alpine
+++ b/dkimpy/Dockerfile.alpine
@@ -14,7 +14,7 @@ COPY requirements.txt .
 RUN \
 	apk update && \
 	apk upgrade -a && \
-	build_pkgs="python3-dev" && \
+	build_pkgs="build-base python3-dev" && \
   runtime_pkgs="ca-certificates openssl python3 py3-pip" && \
   apk --no-cache add --virtual build-dependencies ${build_pkgs} && \
   apk --no-cache add ${runtime_pkgs} && \
