--- a/dkimpy/Dockerfile
+++ b/dkimpy/Dockerfile
@@ -1,9 +1,8 @@
-FROM ubuntu:22.10@sha256:4f9ec2c0aa321966bfe625bc485aa1d6e96549679cfdf98bb404dfcb8e141a7f
+FROM alpine:3.16.2@sha256:bc41182d7ef5ffc53a40b044e725193bc10142a1243f395ee852a8d9730fc2ad
 #FROM python:3.11.0-slim-bullseye@sha256:f8cc89f5e47347703ec0c2b755464d7db2fa16f255ab860c4b24ba6ef2402020
 #FROM python:3.9-alpine
 
 ARG BUILD_VERSION
-ARG DEBIAN_FRONTEND=noninteractive
 
 #ENV PIP_DISABLE_PIP_VERSION_CHECK=1
 ENV PIP_NO_CACHE_DIR=1
@@ -12,14 +11,23 @@ ENV PIP_NO_CACHE_DIR=1
 # pipenv lock -r > requirements.txt
 COPY requirements.txt . 
 
-RUN apt-get update && \
-	apt-get dist-upgrade -y && \
-	DEBIAN_FRONTEND=${DEBIAN_FRONTEND} apt-get install -y --no-install-recommends python3-pip && \
+RUN \
+	apk update && \
+	apk upgrade -a && \
+	build_pkgs="cargo build-base libffi-dev openssl-dev python3-dev" && \
+  runtime_pkgs="ca-certificates openssl python3 py3-pip" && \
+  apk --no-cache add --virtual build-dependencies ${build_pkgs} && \
+  apk --no-cache add ${runtime_pkgs} && \
+  ln -s /usr/bin/python3 /usr/bin/python && \
 	python3 -m pip install --no-cache-dir --upgrade pip && \
+	pip3 install --no-cache-dir --upgrade wheel && \
 	pip3 install --no-cache-dir -r requirements.txt && \
-	apt-get autoremove -y --purge && \
-	rm -rf /var/lib/apt/lists/* && \
-	apt-get clean
+	apk del build-dependencies && \
+  rm -rf /var/cache/apk/* && \
+  rm -rf /root/.cache/pip && \
+  find /usr/lib/ -name '__pycache__' -print0 | xargs -0 -n1 rm -rf && \
+  find /usr/lib/ -name '*.pyc' -print0 | xargs -0 -n1 rm -rf && \
+  rm -rf /root/.cargo
 
 #	apt-get purge -y python3-dev && \
 #RUN pip install sslyze==${BUILD_VERSION}
@@ -31,7 +39,6 @@ LABEL org.opencontainers.image.documentation="https://github.com/jauderho/docker
 LABEL org.opencontainers.image.source="https://github.com/jauderho/dockerfiles"
 LABEL org.opencontainers.image.title="jauderho/dkimpy"
 LABEL org.opencontainers.image.description="dkimpy is a library that implements DKIM (DomainKeys Identified Mail) email signing and verification"
-
 
 CMD ["dkimverify"]
 #CMD ["dknewkey"]
