--- a/.github/workflows/update-docker.yml
+++ b/.github/workflows/update-docker.yml
@@ -40,12 +40,12 @@ jobs:
       - name: Harden Runner
         uses: step-security/harden-runner@2e205a28d0e1da00c5f53b161f4067b052c61f34 # v1
         with:
-          egress-policy: audit
-          disable-telemetry: false
+          egress-policy: block
+          disable-telemetry: true
           allowed-endpoints: 
             aerodent.canonical.com:443
             api.github.com:443
-            azure.archive.ubuntu.com:443
+            azure.archive.ubuntu.com:80
             files.pythonhosted.org:443
             github.com:443
             pypi.org:443
