--- a/.github/workflows/dhcp-helper.yml
+++ b/.github/workflows/dhcp-helper.yml
@@ -29,18 +29,16 @@ jobs:
       - name: Harden Runner
         uses: step-security/harden-runner@2e205a28d0e1da00c5f53b161f4067b052c61f34
         with:
-          egress-policy: audit
-          disable-telemetry: false
+          egress-policy: block
+          disable-telemetry: true
           allowed-endpoints: >
-            95s5acprodeus1file6.blob.core.windows.net:443
             api.github.com:443
-            artifactcache.actions.githubusercontent.com:443
             auth.docker.io:443
             dl-cdn.alpinelinux.org:443
             ghcr.io:443
             github.com:443
             production.cloudflare.docker.com:443
-            registry-1.docker.io:443
+            registry-1.docker.io:443          
           
       - name: Source checkout
         uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # v2.4.0 
