--- a/.github/workflows/nginx.yml
+++ b/.github/workflows/nginx.yml
@@ -30,22 +30,17 @@ jobs:
       - name: Harden Runner
         uses: step-security/harden-runner@2e205a28d0e1da00c5f53b161f4067b052c61f34 # v1
         with:
-          egress-policy: audit
-          disable-telemetry: false
-          allowed-endpoints: 
-            95s5acprodeus1file6.blob.core.windows.net:443
+          egress-policy: block
+          disable-telemetry: true
+          allowed-endpoints: >
             api.github.com:443
-            artifactcache.actions.githubusercontent.com:443
             auth.docker.io:443
-            codeload.github.com:443
             dl-cdn.alpinelinux.org:443
             ghcr.io:443
             github.com:443
-            nginx.org:443
+            nginx.org:80
             objects.githubusercontent.com:443
             production.cloudflare.docker.com:443
-            proxy.golang.org:443
-            rdfepirv2bn1prdstr01.blob.core.windows.net:443
             registry-1.docker.io:443
             www.openssl.org:443
           
