--- a/visidata/requirements.txt
+++ b/visidata/requirements.txt
@@ -2,12 +2,12 @@
 certifi==2022.9.24 ; python_version >= '3.6'
 charset-normalizer==2.1.1 ; python_full_version >= '3.6.0'
 idna==3.4 ; python_version >= '3.5'
-importlib-metadata==5.0.0 ; python_version >= '3.7'
+importlib-metadata==5.1.0 ; python_version >= '3.7'
 lxml==4.9.1
 python-dateutil==2.8.2
 requests==2.28.1
 six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-urllib3==1.26.12 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5' and python_version < '4'
+urllib3==1.26.13 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 visidata==2.10.2
 wcwidth==0.2.5
-zipp==3.10.0 ; python_version >= '3.7'
+zipp==3.11.0 ; python_version >= '3.7'
