--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -2,7 +2,7 @@
 ansible==7.0.0
 ansible-compat==2.2.5 ; python_version >= '3.8'
 ansible-core==2.14.0 ; python_version >= '3.9'
-ansible-lint==6.8.7
+ansible-lint==6.9.0
 attrs==22.1.0 ; python_version >= '3.5'
 bitmath==1.3.3.1
 black==22.10.0 ; python_version >= '3.7'
@@ -40,12 +40,12 @@ retryz==0.1.9
 rich==12.6.0 ; python_full_version >= '3.6.3' and python_full_version < '4.0.0'
 ruamel.yaml==0.17.21 ; python_version >= '3'
 ruamel.yaml.clib==0.2.7 ; python_version < '3.11' and platform_python_implementation == 'CPython'
-setuptools==65.6.2 ; python_version >= '3.7'
+setuptools==65.6.3 ; python_version >= '3.7'
 six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 storops==1.2.11
-subprocess-tee==0.3.5 ; python_version >= '3.6'
+subprocess-tee==0.4.0 ; python_version >= '3.8'
 tomli==2.0.1 ; python_full_version < '3.11.0a7'
-urllib3==1.26.12 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5' and python_version < '4'
+urllib3==1.26.13 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 wcmatch==8.4.1 ; python_version >= '3.7'
 wheel==0.38.4
 xmltodict==0.13.0 ; python_version >= '3.4'
