--- a/rustybgp/Dockerfile
+++ b/rustybgp/Dockerfile
@@ -11,7 +11,7 @@ ARG GIT_URL=https://github.com/osrg/rustybgp.git
 
 RUN test -n "${BUILD_VERSION}" \
 	&& apk update \
-	&& apk add ca-certificates curl gcc protoc git musl-dev mold \
+	&& apk add --no-cache ca-certificates curl gcc protoc git musl-dev mold \
 	&& git clone ${GIT_URL} \
 	&& cd /usr/src/github.com/osrg/rustybgp/rustybgp \
 	# revert and remove CPU requirement
