--- a/templates/Dockerfile.go-mod
+++ b/templates/Dockerfile.go-mod
@@ -13,7 +13,7 @@ ENV GO111MODULE=on
 #RUN apk update && apk add --no-cache git
 
 #RUN printf "nameserver 192.168.1.1" > /etc/resolv.conf && apk update && apk add --no-cache git
-RUN apk update && apk add git
+RUN apk update && apk add --no-cache git
 RUN go mod download && go mod verify
 
 CMD go run cmd/main.go
