--- a/docker-autocompose/requirements.txt
+++ b/docker-autocompose/requirements.txt
@@ -2,10 +2,11 @@
 certifi==2022.12.7 ; python_version >= '3.6'
 charset-normalizer==2.1.1 ; python_full_version >= '3.6.0'
 docker==6.0.1
--e git+https://github.com/jauderho/docker-autocompose.git@833dc2477f500bc3dfc251c1029f7ab317e1deee#egg=docker-autocompose
+-e git+https://github.com/jauderho/docker-autocompose.git@7111f203518a4192ed32a7615178874f15ce4299#egg=docker-autocompose
 idna==3.4 ; python_version >= '3.5'
-packaging==22.0
+packaging==21.3
 pyaml==21.10.1
+pyparsing==3.0.9 ; python_full_version >= '3.6.8'
 pyyaml==6.0 ; python_version >= '3.6'
 requests==2.28.1 ; python_version >= '3.7' and python_version < '4'
 six==1.16.0
