--- a/bl3auto/Dockerfile
+++ b/bl3auto/Dockerfile
@@ -10,6 +10,7 @@ ENV GO111MODULE on
 
 RUN test -n "${BUILD_VERSION}" \
 	&& apk update \
+	&& apk upgrade -a \
 	&& apk add --no-cache ca-certificates curl gcc build-base \
 	&& update-ca-certificates \
 	&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/bl3auto.tar.gz \
@@ -20,9 +21,10 @@ RUN test -n "${BUILD_VERSION}" \
 RUN ls -l /go/src/github.com/jauderho/bl3auto
 RUN cp bl3auto /go/bin/bl3auto
 
+
 # ----------------------------------------------------------------------------
 
-#FROM scratch
+
 FROM alpine:3.17.0@sha256:8914eb54f968791faf6a8638949e480fef81e697984fba772b3976835194c6d4
 
 LABEL org.opencontainers.image.authors="Jauder Ho <jauderho@users.noreply.github.com>"
@@ -31,6 +33,9 @@ LABEL org.opencontainers.image.documentation="https://github.com/jauderho/docker
 LABEL org.opencontainers.image.source="https://github.com/jauderho/dockerfiles"
 LABEL org.opencontainers.image.title="jauderho/bl3auto"
 LABEL org.opencontainers.image.description="Borderlands Auto SHiFT Code Redemption System"
+
+RUN apk update \
+	&& apk upgrade -a
 
 COPY --from=build /go/src/github.com/jauderho/bl3auto/bl3auto /usr/local/bin/
 
