--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -37,6 +37,7 @@ jobs:
             github.com:443
             fulcio.sigstore.dev:443
             oauth2.sigstore.dev:443
+            rekor.sigstore.dev:443
             sigstore-tuf-root.storage.googleapis.com:443
 
       - name: "Checkout code"
