--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -32,6 +32,7 @@ jobs:
           allowed-endpoints:
             api.github.com:443
             api.osv.dev:443
+            api.securityscorecards.dev:443
             bestpractices.coreinfrastructure.org:443
             codeload.github.com:443
             github.com:443
