--- a/dnsx/Dockerfile
+++ b/dnsx/Dockerfile
@@ -10,6 +10,7 @@ ENV CGO_ENABLED 0
 
 RUN test -n "${BUILD_VERSION}" \
 	&& apk update \
+	&& apk upgrade -a \
 	&& apk add --no-cache curl gcc musl-dev \
 	&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/dnsx.tar.gz \
 	&& tar xzf /tmp/dnsx.tar.gz --strip 1 -C /go/src/github.com/projectdiscovery/dnsx \
@@ -31,7 +32,9 @@ LABEL org.opencontainers.image.source="https://github.com/jauderho/dockerfiles"
 LABEL org.opencontainers.image.title="jauderho/dnsx"
 LABEL org.opencontainers.image.description="dnsx is a fast and multi-purpose DNS toolkit"
 
-RUN apk add --no-cache bind-tools ca-certificates
+RUN apk update \
+	&& apk upgrade -a \
+	&& apk add --no-cache bind-tools ca-certificates
 
 COPY --from=build /go/src/github.com/projectdiscovery/dnsx/dnsx /usr/local/bin/dnsx
 COPY --from=build /config /config
