--- a/ddosify/Dockerfile
+++ b/ddosify/Dockerfile
@@ -10,6 +10,7 @@ ENV CGO_ENABLED 0
 
 RUN test -n "${BUILD_VERSION}" \
 	&& apk update \
+	&& apk upgrade -a \
 	&& apk add --no-cache curl gcc musl-dev \
 	&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/ddosify.tar.gz \
 	&& tar xzf /tmp/ddosify.tar.gz --strip 1 -C /go/src/github.com/ddosify/ddosify \
@@ -30,6 +31,9 @@ LABEL org.opencontainers.image.documentation="https://github.com/jauderho/docker
 LABEL org.opencontainers.image.source="https://github.com/jauderho/dockerfiles"
 LABEL org.opencontainers.image.title="jauderho/ddosify"
 LABEL org.opencontainers.image.description="ddosify is a high performance load testing tool"
+
+RUN apk update \
+	&& apk upgrade -a
 
 COPY --from=build /go/src/github.com/ddosify/ddosify/ddosify /usr/local/bin/ddosify
 COPY --from=build /config /config
