--- a/dry/Dockerfile
+++ b/dry/Dockerfile
@@ -10,6 +10,7 @@ ENV CGO_ENABLED 0
 
 RUN test -n "${BUILD_VERSION}" \
 	&& apk update \
+	&& apk upgrade -a \
 	&& apk add --no-cache curl gcc musl-dev \
 	&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/dry.tar.gz \
 	&& tar xzf /tmp/dry.tar.gz --strip 1 -C /go/src/github.com/moncho/dry \
@@ -31,6 +32,9 @@ LABEL org.opencontainers.image.documentation="https://github.com/jauderho/docker
 LABEL org.opencontainers.image.source="https://github.com/jauderho/dockerfiles"
 LABEL org.opencontainers.image.title="jauderho/dry"
 LABEL org.opencontainers.image.description="Dry is a terminal application to manage Docker and Docker Swarm."
+
+RUN apk update \
+	&& apk upgrade -a
 
 COPY --from=build /go/src/github.com/moncho/dry/dry-bin /usr/local/bin/dry
 COPY --from=build /config /config
