--- a/.github/workflows/lego.yml
+++ b/.github/workflows/lego.yml
@@ -12,7 +12,7 @@ on:
     - cron: "0 8 * * 1"
 
 env:
-  BUILD_VERSION: "null"
+  BUILD_VERSION: "v4.9.1"
   DOCKER_CLI_EXPERIMENTAL: enabled
   REPOSITORY: ${{ github.actor }}/${{ github.workflow }} 
 
