--- a/.github/workflows/log4j-scan.yml
+++ b/.github/workflows/log4j-scan.yml
@@ -12,7 +12,7 @@ on:
     - cron: "0 8 * * 1"
 
 env:
-  BUILD_VERSION: "null"
+  BUILD_VERSION: "v.1.1.0"
   DOCKER_CLI_EXPERIMENTAL: enabled
   REPOSITORY: ${{ github.actor }}/${{ github.workflow }} 
 
