Updated ntfy to v1.30.1
Signed-off-by: Jauder Ho <jauderho@users.noreply.github.com>

--- a/.github/workflows/ntfy.yml
+++ b/.github/workflows/ntfy.yml
@@ -12,7 +12,7 @@ on:
     - cron: "0 8 * * 1"
 
 env:
-  BUILD_VERSION: "null"
+  BUILD_VERSION: "v1.30.1"
   DOCKER_CLI_EXPERIMENTAL: enabled
   REPOSITORY: ${{ github.actor }}/${{ github.workflow }} 
 
