--- a/.github/workflows/goreplay.yml
+++ b/.github/workflows/goreplay.yml
@@ -12,7 +12,7 @@ on:
     - cron: "0 8 * * 1"
 
 env:
-  BUILD_VERSION: "1.3.3"
+  BUILD_VERSION: "null"
   DOCKER_CLI_EXPERIMENTAL: enabled
   REPOSITORY: ${{ github.actor }}/${{ github.workflow }} 
 
