Update requirements for sslyze ...
Signed-off-by: Jauder Ho <jauderho@users.noreply.github.com>

--- a/sslyze/requirements.txt
+++ b/sslyze/requirements.txt
@@ -1,10 +1,11 @@
 -i https://pypi.org/simple
 cffi==1.15.1
 cryptography==38.0.4
-nassl==4.0.2
+nassl==5.0.0
 pycparser==2.21
 pydantic==1.10.4
-sslyze==5.0.6
+pyopenssl==22.1.0 ; python_version >= '3.6'
+sslyze==5.1.0
 tls-parser==2.0.0
 typing-extensions==4.4.0 ; python_version >= '3.7'
 wheel==0.38.4
