--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -12,13 +12,14 @@ certifi==2022.12.7 ; python_version >= '3.6'
 cffi==1.15.1
 charset-normalizer==3.0.1 ; python_full_version >= '3.6.0'
 click==8.1.3 ; python_version >= '3.7'
-commonmark==0.9.1
 cryptography==39.0.0 ; python_version >= '3.6'
 filelock==3.9.0 ; python_version >= '3.7'
 idna==3.4 ; python_version >= '3.5'
 jinja2==3.1.2 ; python_version >= '3.7'
 jsonschema==4.17.3 ; python_version >= '3.7'
+markdown-it-py==2.1.0 ; python_version >= '3.7'
 markupsafe==2.1.2 ; python_version >= '3.7'
+mdurl==0.1.2 ; python_version >= '3.7'
 -e git+https://github.com/mitogen-hq/mitogen.git@660d3e088501816edc12f4b98e9e92a35f68c707#egg=mitogen
 mypy-extensions==0.4.3
 ntlm-auth==1.5.0 ; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
@@ -36,7 +37,7 @@ requests==2.28.2 ; python_version >= '3.7' and python_version < '4'
 requests-ntlm==1.1.0
 resolvelib==0.8.1
 retryz==0.1.9
-rich==13.1.0 ; python_full_version >= '3.7.0'
+rich==13.2.0 ; python_full_version >= '3.7.0'
 ruamel.yaml==0.17.21 ; python_version >= '3'
 ruamel.yaml.clib==0.2.7 ; python_version < '3.11' and platform_python_implementation == 'CPython'
 setuptools==66.0.0 ; python_version >= '3.7'
