--- a/goplay2/Dockerfile
+++ b/goplay2/Dockerfile
@@ -10,6 +10,7 @@ ENV CGO_ENABLED 1
 
 RUN test -n "${BUILD_VERSION}" \
 	&& apk update \
+	&& apk upgrade -a \
 	&& apk add --no-cache ca-certificates curl git gcc musl-dev fdk-aac-dev \
 	&& update-ca-certificates \
 	&& git clone --depth 1 ${GIT_URL} /go/src/github.com/openairplay/goplay2 \
