--- a/hakrawler/Dockerfile
+++ b/hakrawler/Dockerfile
@@ -10,6 +10,7 @@ ENV CGO_ENABLED 0
 
 RUN test -n "${BUILD_VERSION}" \
 	&& apk update \
+	&& apk upgrade -a \
 	&& apk add --no-cache git gcc musl-dev \ 
 	&& git clone --depth 1 ${GIT_URL} /go/src/github.com/hakluke/hakrawler \
 	&& cd /go/src/github.com/hakluke/hakrawler \
