--- a/nginx-quic/Dockerfile.alpine.boringssl
+++ b/nginx-quic/Dockerfile.alpine.boringssl
@@ -7,6 +7,7 @@ WORKDIR /src
 COPY . .
 
 RUN apk update && \
+    apk upgrade -a && \
     apk add --no-cache git gcc make g++ cmake ccache perl libunwind-dev ca-certificates linux-headers build-base go mold && \
     git clone --depth 1 https://boringssl.googlesource.com/boringssl && \
     mkdir boringssl/build && \
