--- a/nginx-quic/Dockerfile.alpine.quictls
+++ b/nginx-quic/Dockerfile.alpine.quictls
@@ -7,6 +7,7 @@ WORKDIR /src
 COPY . .
 
 RUN apk update && \
+    apk upgrade -a && \
     apk add --no-cache git gcc make g++ ccache perl ca-certificates linux-headers build-base go mold && \
     git clone --depth 1 https://github.com/quictls/openssl && \
     cd openssl && \
